k8s/template/gray-release/old-myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp-template
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp-container
          image: registry.cn-hangzhou.aliyuncs.com/zhoubo56/myapp:v1
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: ali-zhoubo

---

apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: default
  labels:
    app: myapp
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: myapp
  type: ClusterIP
