k8s/template/gray-release/new-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gray-release
  annotations:
    #canary-by-header - > canary-by-cookie - > canary-weight
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
    #nginx.ingress.kubernetes.io/canary-weight: "100"
spec:
  rules:
  - host: www.zhoubo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gray-myapp-svc
          servicePort: 80
