k8s/template/gray-release/old-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mapp
  annotations:
spec:
  rules:
  - host: www.zhoubo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc
          servicePort: 80
